Fix link to g-2 talk (was private link). Added last updated text.

--- a/index.html
+++ b/index.html
@@ -497,6 +497,8 @@
 
 <p>I have a list of recent <a href="talks/">Public Talks</a> and <a href="publications/">Publications</a>.</p>
 
+<p><small>Site content last updated on September 11, 2019.</small></p>
+
 
     <div class="row">
 
