Fix link to g-2 talk (was private link). Added last updated text.

--- a/public/talks/index.html
+++ b/public/talks/index.html
@@ -408,11 +408,11 @@ A.L. Lyon, Radiation, I have presented this talk to the Cass Junior High School 
 
 <p>A.L. Lyon, <strong>Radiation</strong>, I have presented this talk to the Cass Junior High School 8th grade class along with a cloud chamber demonstration (see below) in 2017 and 2018 [<a href="https://drive.google.com/file/d/1RhvbmKvayRw0qToYB_Lt1C8c3BI4qZi1/view?usp=sharing">material</a>]</p>
 
-<p>A. L. Lyon, <strong>Super Easy Cloud Chamber</strong>, My daughter and I build a cloud chamber that we&rsquo;ve demonstrated at schools and libraries. See <a href="https://github.com/lyon-fnal/cloud-chamber/blob/master/README.md">here</a> for information and instructions. There&rsquo;s a movie of the chamber operating on the bottom of that page or directly <a href="https://www.youtube.com/watch?v=cFG3P-VRK4E">here</a></p>
+<p>A. L. Lyon, <strong>Super Easy Cloud Chamber</strong>, My daughter and I built a cloud chamber that we&rsquo;ve demonstrated at schools and libraries. See <a href="https://github.com/lyon-fnal/cloud-chamber/blob/master/README.md">here</a> for information and instructions. There&rsquo;s a movie of the chamber operating on the bottom of that page or directly <a href="https://www.youtube.com/watch?v=cFG3P-VRK4E">here</a></p>
 
 <p>A.L. Lyon, <strong>Long Term Vision for LArSoft</strong>, LArSoft <a href="">Workshop</a> 2019, June 2019 [<a href="https://indico.fnal.gov/event/20453/session/9/contribution/16/material/slides/0.pdf">material</a>]</p>
 
-<p>A.L. Lyon, <strong>The Muon g-2 Experiment</strong>, I have presented versions of this talk in many different places including university colloquia (N.C. State), seminars (Argonne National Laboratory, University of Maryland, University of Minnesota, National Taiwan University), public libraries (Indian Prairie, Woodridge, Deerfield), and other venues. Last given to Quarknet Teachers Workshop in 2018 [<a href="https://gm2-docdb.fnal.gov/cgi-bin/private/RetrieveFile?docid=13158&filename=quarknet2018.pdf&version=1">material</a>]</p>
+<p>A.L. Lyon, <strong>The Muon g-2 Experiment</strong>, I have presented versions of this talk in many different places including university colloquia (N.C. State), seminars (Argonne National Laboratory, University of Maryland, University of Minnesota, National Taiwan University), public libraries (Indian Prairie, Woodridge, Deerfield), and other venues. Last given to Quarknet Teachers Workshop in 2018 [<a href="http://gm2-docdb.fnal.gov/cgi-bin/RetrieveFile?docid=13158&filename=quarknet2018.pdf&version=1">material</a>]</p>
 
     </div>
 
