Update inspire link to nice beta

--- a/project/qc_hep_hpc/index.html
+++ b/project/qc_hep_hpc/index.html
@@ -519,7 +519,7 @@
             
           
           <li>
-            <a itemprop="sameAs" href="http://inspirehep.net/record/999475" target="_blank" rel="noopener">
+            <a itemprop="sameAs" href="https://labs.inspirehep.net/authors/999475" target="_blank" rel="noopener">
               <i class="ai ai-inspire"></i>
             </a>
           </li>
