--- a/project/gm2/index.html
+++ b/project/gm2/index.html
@@ -570,7 +570,7 @@
             
           
           <li>
-            <a itemprop="sameAs" href="http://inspirehep.net/record/999475" target="_blank" rel="noopener">
+            <a itemprop="sameAs" href="https://labs.inspirehep.net/authors/999475" target="_blank" rel="noopener">
               <i class="ai ai-inspire"></i>
             </a>
           </li>
